_env/envoy/envoy.yaml
static_resources:
  listeners:

  # front proxy
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/service/1"
                route:
                  cluster: bcm_nginx
              - match:
                  prefix: "/service/2"
                route:
                  cluster: bcm_wamp
          http_filters:
          - name: envoy.router
            config: {}

  # # services
  # - address:
  #     socket_address:
  #       address: 0.0.0.0
  #       port_value: 10000
  #   filter_chains:
  #   - filters:
  #     - name: envoy.http_connection_manager
  #       config:
  #         codec_type: auto
  #         stat_prefix: ingress_http
  #         route_config:
  #           name: local_route
  #           virtual_hosts:
  #           - name: service
  #             domains:
  #             - "*"
  #             routes:
  #             - match:
  #                 prefix: "/service"
  #               route:
  #                 cluster: local_service
  #         http_filters:
  #         - name: envoy.router
  #           config: {}

  clusters:

  # front proxy
  - name: bcm_nginx
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: bcm_nginx
        port_value: 10000
  - name: bcm_wamp
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: bcm_wamp
        port_value: 10000

  # services
  - name: local_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 185.19.28.15
        port_value: 8081
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
